chore: changes for responses processing and chat UI

--- a/tools/rum/rum-slicer.css
+++ b/tools/rum/rum-slicer.css
@@ -141,7 +141,7 @@ main .key-metrics ul {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  grid-gap: 8px;
+  gap: 8px;
   padding-left: 0;
 }
 
@@ -430,7 +430,7 @@ vitals-facet label::before {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  grid-gap: 4px;
+  gap: 4px;
   padding-left: 0;
   margin: 4px 2px;
 }
@@ -440,7 +440,7 @@ vitals-facet label::before {
   grid-template-areas: "check lab" " - cwv";
   grid-template-columns: 20px 1fr;
   align-items: center;
-  grid-gap: 0 16px;
+  gap: 0 16px;
 }
 
 #facets fieldset div ~ div.more-container:last-of-type,
@@ -600,7 +600,7 @@ vitals-facet fieldset label {
   display: grid;
   grid-template-areas: "check lab";
   grid-template-columns: 0 1fr;
-  grid-gap: 0;
+  gap: 0;
 }
 
 #facets vitals-facet fieldset label {
@@ -825,13 +825,13 @@ facet-sidebar[aria-disabled="true"] div.quick-filter {
   display: none;
 }
 
-@media (min-width: 600px) {
+@media (width >= 600px) {
   main .title url-selector input {
     font-size: var(--type-heading-l-size);
   }
 }
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
   main .title {
     flex-wrap: nowrap;
   }
@@ -870,7 +870,7 @@ facet-sidebar[aria-disabled="true"] div.quick-filter {
   }
 
   main .key-metrics ul {
-    grid-gap: 16px;
+    gap: 16px;
   }
 
   main .key-metrics ul > * {
@@ -885,7 +885,7 @@ facet-sidebar[aria-disabled="true"] div.quick-filter {
 
   #facets ul.cwv {
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    grid-gap: 8px;
+    gap: 8px;
     margin: 8px 4px;
   }
 
@@ -898,7 +898,7 @@ facet-sidebar[aria-disabled="true"] div.quick-filter {
 }
 
 /* split mode */
-@media (min-width: 1600px) {
+@media (width >= 1600px) {
   #deepmain {
     display: flex;
     gap: 16px;
@@ -930,7 +930,7 @@ facet-sidebar[aria-disabled="true"] div.quick-filter {
   }
 }
 
-@media (min-width: 2000px) {
+@media (width >= 2000px) {
   main .key-metrics ul {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   }
