chore(oversight): update the dashboard with metric details (titles)

--- a/tools/oversight/rum-slicer.css
+++ b/tools/oversight/rum-slicer.css
@@ -1166,13 +1166,13 @@ facet-sidebar[aria-disabled="true"] div.quick-filter {
   display: none;
 }
 
-@media (min-width: 600px) {
+@media (width >= 600px) {
   main .title url-selector input {
     font-size: var(--type-heading-l-size);
   }
 }
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
   main .title {
     flex-wrap: nowrap;
   }
@@ -1240,7 +1240,7 @@ facet-sidebar[aria-disabled="true"] div.quick-filter {
 
 /* split mode */
 
-@media (min-width: 1600px) {
+@media (width >= 1600px) {
   #deepmain {
     display: flex;
     gap: 16px;
