--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,8 @@
   --type-heading-s-lh: 20px;
   --type-heading-xs-size: 18px;
   --type-heading-xs-lh: 22px;
+  --type-heading-xxs-size: var(--type-body-s-size);
+  --type-heading-xxs-lh: var(--type-body-s-lh);
 
   /* Body (Consonant) */
   --type-body-l-size: 20px;
@@ -423,6 +425,24 @@ h2 {
 h3 {
   font-size: var(--type-heading-m-size);
   line-height: var(--type-heading-m-lh);
+}
+
+/* Heading S */
+h4 {
+  font-size: var(--type-heading-s-size);
+  line-height: var(--type-heading-s-lh);
+}
+
+/* Heading XS */
+h5 {
+  font-size: var(--type-heading-xs-size);
+  line-height: var(--type-heading-xs-lh);
+}
+
+/* Heading XS */
+h6 {
+  font-size: var(--type-heading-xxs-size);
+  line-height: var(--type-heading-xxs-lh);
 }
 
 /* Utilities */
