style: make incident link inherit color instead of blue
- Links now inherit the status color (green/amber/red)
- Underlined to indicate clickability
- Hover effect increases underline thickness
- More subtle than default blue links

Signed-off-by: Lars Trieloff <lars@trieloff.net>

--- a/blocks/service-level-objectives/service-level-objectives.css
+++ b/blocks/service-level-objectives/service-level-objectives.css
@@ -59,6 +59,17 @@
   color: var(--color-text-secondary, #666);
 }
 
+.service-level-objectives .service .uptime p a {
+  color: inherit;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 2px;
+}
+
+.service-level-objectives .service .uptime p a:hover {
+  text-decoration-thickness: 2px;
+}
+
 @media (width <= 600px) {
   .service-level-objectives .service {
     grid-template-columns: 1fr;
