--- a/blocks/service-level-objectives/service-level-objectives.css
+++ b/blocks/service-level-objectives/service-level-objectives.css
@@ -40,7 +40,7 @@
 
 .service-level-objectives .service .uptime.ok h4,
 .service-level-objectives .service .uptime.ok p {
-  color: var(--color-success, #2fcc66);
+  color: #007a4d;
 }
 
 .service-level-objectives .service .uptime.warn h4,
