--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -368,6 +368,12 @@ button.gnav-toggle::after {
   transform: rotate(-180deg);
 }
 
+@media (prefers-color-scheme: dark) {
+  .gnav-navitem.has-menu > a::after {
+    filter: invert(1);
+  }
+}
+
 .gnav-navitem.has-menu.is-open > a::after {
   transform: rotate(0deg);
 }
