--- a/blocks/logo-wall/logo-wall.css
+++ b/blocks/logo-wall/logo-wall.css
@@ -82,8 +82,6 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo-wall .logo-wall-list-item img {
-    filter: grayscale(1) invert(1) brightness(1.3) contrast(1.5);
-  }
+html[data-theme="dark"] .logo-wall .logo-wall-list-item img {
+  filter: grayscale(1) invert(1) brightness(1.3) contrast(1.5);
 }
